--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@ node_modules
 /dist
 
 /tests/e2e/reports/
+/tests_output
 selenium-debug.log
 
 # local env files
+.env
 .env.local
 .env.*.local
 
