--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "gapplayer": "rollup -c"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SubZtep/gif-animation-preview"
   },
   "dependencies": {
+    "browserstack-local": "^1.3.7",
+    "dotenv": "^6.2.0",
     "vue": "^2.5.22",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -25,10 +32,13 @@
     "@vue/cli-service": "^3.4.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
-    "fibers": "^3.1.1",
+    "nightwatch": "^1.0.19",
+    "rollup": "^1.1.2",
+    "rollup-plugin-typescript": "^1.0.0",
     "sass": "^1.16.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
+    "tslib": "^1.9.3",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.21"
   },
